changed tags to english

--- a/_posts/2020-03-01-baekjoon1948.md
+++ b/_posts/2020-03-01-baekjoon1948.md
@@ -5,8 +5,8 @@ excerpt: 출발 도시로 부터 도착 도시까지 가는 최장 루트를 찾
 categories:
     - Algorithm
 tags:
-    - 백준
-    - 위상정렬
+    - Baekjoon
+    - Topological Sort
 use_math: true
 ---
 
