--- a/_posts/2020-03-01-baekjoon1948.md
+++ b/_posts/2020-03-01-baekjoon1948.md
@@ -8,6 +8,8 @@ tags:
     - Baekjoon
     - Topological Sort
 use_math: true
+toc: true
+toc_sticky: true
 ---
 
 [<img src="../../assets/images/algorithm/baekjoon1948">](https://www.acmicpc.net/problem/1948)
@@ -18,6 +20,7 @@ use_math: true
 1. 도착 지점까지 가는 가장 오래 걸리는 시간
 2. 도착 지점까지 가장 오래 걸리게 가는 루트에 포함된 도로의 갯수
 
+
 ## 1. 도착 지점까지 가는 가장 오래 걸리는 시간
 
 
@@ -25,7 +28,9 @@ use_math: true
 
 > $$time(B) = \max(time(B), time(A) + t)$$
 
+
 ## 2. 도착 지점까지 가장 오래 걸리게 가는 루트에 포함된 도로의 갯수
+
 
 두 번째 파트는 조금 주의해야합니다. 먼저 도착지점까지 가는 가장 오래 걸리는 루트는 하나가 아닐 수 있습니다. 문제에 있는 예시로 한번 살펴보도록 하겠습니다.
 
@@ -45,6 +50,9 @@ use_math: true
 
 
 위의 그림으로 예시를 들어 본다면 도시 1에서 도시 7까지 가는데 가장 오래 걸리는 시간은 12입니다. 도시 1에서 도시 6까지 가는데 가장 오래 걸리는 시간은 7초 입니다. 도시 6에서 도시7까지 가는데 5초가 걸리므로 도시 6에서 도시7까지 가는 도로는 가장 오래 걸리는 루트에 포함되게 됩니다. 하지만 도시 1에서 도시 2까지 가는데 걸리는 가장 도래 걸리는 시간은 4초이고 $4 + 5 \neq 12$이기 때문에 도시 2에서 도시 7까지 가는 도로는 가장 오래 걸리는 루트에 포함될 수 없습니다.
+
+
+## Code
 
 
 ```cpp
