spelling error and tags modified

--- a/_posts/2020-03-04-prml_ch1.1.md
+++ b/_posts/2020-03-04-prml_ch1.1.md
@@ -6,12 +6,12 @@ categories:
     - PRML
 tags:
     - Machine Learning
-    - generalization
-    - over-fitting
-    - under-fitting
-    - error function
-    - model selection
-    - regularization
+    - Generalization
+    - Over-fitting
+    - Under-fitting
+    - Error Function
+    - Model Selection
+    - Regularization
 use_math: true
 toc: true
 toc_sticky: true
@@ -147,7 +147,7 @@ $$\tilde{E}(x) = \frac{1}{2} \sum_{n=1}^{N} \{y(x_n, w) - t_n\}^2 + \frac{\lambd
 ### The impact of regularization term $\lambda$
 
 - the result of the polynomial differs depending on the value of %\lambda% while the value of M stays constant
-    - when %\lambda = -18%, the over-fitting problem has been alleviated
+    - when $\lambda = -18$, the over-fitting problem has been alleviated
 
 ![figure1.7](../../assets/images/prml/figure1_7)
 
