spelling mistake fixed

--- a/_posts/2020-03-05-geometry.md
+++ b/_posts/2020-03-05-geometry.md
@@ -21,7 +21,7 @@ toc_sticky: true
 
 기하학이 다루는 대상으로는 점, 선, 면, 도형, 공간과 같은 것이 있습니다.
 
-## 벡터와 스랄라
+## 벡터와 스칼라
 
 - 스칼라: 크기만 있고 방향을 가지지 않는 물리량
 - 벡터: 크기와 방향을 가지는 물리량
