revised prml ch1.2

--- a/_posts/2020-03-07-prml_ch1.2.md
+++ b/_posts/2020-03-07-prml_ch1.2.md
@@ -16,23 +16,25 @@ last_modified_at : 2020-03-09
 ---
 *This post is summary of the book Pattern Recognition and Machine Learning by Christopher M. Bishop*
 
+*A lot of explanations in this page has been quoted from the book directly because most of the content was definitions used in probability theory*
+
 ## 1.2 Probability Theory
 
 - **Uncertainty** is a key concept in the field of pattern recognition
-- uncertainty arises through
+- uncertainty arises through:
     - noise on measurements
     - finite size of data sets
 - *Probability Theory* provides:
     - a consistent framework for quantification and manipulation of uncertainty
     - forms one of the central foundations for pattern recognition
-- when probability theory is combined with *Decision Theory*
-    - allows us to make optimal predictions given all the information available on us
-    - even though that information may be incomplete or ambiguous
+- when probability theory is combined with *Decision Theory*:
+    - allows us to make optimal predictions given all the information available to us
+    - the information provided may be incomplete or ambiguous
     - will be discussed in Section 1.5
 
 ### Example: apple and oranges
 
-- two boxes of fruit from which an item of fruit is randomly selected and replaced in the box from which it came
+- two boxes of fruits from which an item of fruit is randomly selected and replaced
 - suppose this process is repeated many times
     - equally likely to select any of the pieces of fruit in the box
 - red box:
@@ -74,17 +76,19 @@ last_modified_at : 2020-03-09
     - a total of $N$ trials in which we sample both of the variables $X$ and $Y$
     - $n_{ij}$: number of trials which $X = x_i$ and $Y = y_j$
     - $c_i$: number of trials which $X$ takes the value $x_i$ regardless of the value of $Y$
-    - $r_j$: number of trials which $Y$ takes the value $y_i$ regardless of the value of $X$
+    - $r_j$: number of trials which $Y$ takes the value $y_j$ regardless of the value of $X$
 
 ![figure1.10](../../assets/images/prml/figure1_10)
 
-- $p(X = x_i, Y = y_i)$: probability that $X = x_i$ and $Y = y_i$
-    - this is called the *joint probability* of $X = x_i$ and $Y = y_i$
+- $p(X = x_i, Y = y_j)$: probability that $X = x_i$ and $Y = y_j$
+    - this is called the *joint probability* of $X = x_i$ and $Y = y_j$
     - the number of points falling in the cell $i,j$ as a fraction of the total number of points
 
-$$p(X=x_i, Y=y_i) = \frac{n_{ij}}{N} \tag{1.5}$$
+$$p(X=x_i, Y=y_j) = \frac{n_{ij}}{N} \tag{1.5}$$
 
 - here, we are implicitly considering the limit $N \rightarrow \infty$
+    - this is the **Frequentist** view of probability
+    - **Bayesian** perspective about probability will also be introduced later
 - $p(X=x_i)$: probability that $X$ takes the value $x_i$ irrespective of the value of Y
     - this is called the *marginal probability*
     - the fraction of the total number of points that fall in column $i$
@@ -101,7 +105,7 @@ $$ p(X=x_i)= \sum_{j=1}^L p(X=x_i, Y=y_j) \tag{1.7} $$
 
 - $p(Y=y_j \vert X=x_i)$: probability of $P(Y=y_j)$ when the value of $X$ is given as $X=x_i$
     - this is called the *conditional probability* of $Y = y_j$ given $X=x_i$
-    - the fraction of the point in columne $i$ that fall in cell $i,j$
+    - the fraction of the point in column $i$ that fall in cell $i,j$
 
 $$p(Y=y_j \vert X= x_i) = \frac{n_{ij}}{c_i} \tag{1.8}$$
 
@@ -122,12 +126,12 @@ $$p(X=x_i, Y=y_j) = \frac{n_{ij}}{N} = \frac{n_{ij}}{c_i} \cdot \frac{c_i}{N} = 
 - from the symmetry property of product rule, we can obtain *Bayes' theorem*
     - symmetry property of product rule
 
-    $$p(X,Y) = p(Y,X) = p(X|Y)p(Y)$$
+    $$p(X,Y) = p(Y|X)p(X) = p(X|Y)p(Y) = p(Y,X)$$
 
     - Bayes' Themorm
 
     $$p(Y|X) = \frac{p(X|Y)p(Y)}{p(X)} \tag{1.12}$$
-- Bayes' theorem plays a central role in patter recognition and machine learning
+- Bayes' theorem plays a central role in pattern recognition and machine learning
 - Bayes' theorem can be expressed in terms of quantities appearing in the numerator using the sum rule
     - denominator can be seen as the normalization constant 
         - because the sum of conditional probability must add up to one 
@@ -183,17 +187,17 @@ p(B=r|F=o) &= \frac{p(F=o|B=r)p(B=r)}{p(F=o)} \\
 \end{align*}
 $$
 
-- using the Bayes' theorem, we could make predictions about which box the fruit came
+- using the Bayes' theorem, we could make predictions about which box the fruit came from
     - before we were told which fruit has been selected, the most complete information we had about box was $p(B)$
-        - this is called *prior probability* because it is the probability available before we gain the data
-    - after we observed the identity of the fruit, we could update our prior probability with the given data and obtained $p(B \vert F)$
+        - this is called *prior probability* because it is the probability available before we obtained the data
+    - after we observed the identity of the fruit, we could update our prior probability with the given data and got $p(B \vert F)$
         - this is called *posterior probability* because it in the probability obtained after we have observed F
 
-- for this example, the probability of selecting the red box has significantly increased after we observed the selected fruit is an orange
-    - this is becuase there were more oranges in the red box
-    - this concept is very important later since we can update our prediction after we observe data
+- for this example, the probability of selecting the red box has significantly increased after we observed that the selected fruit is an orange
+    - this is becuase there were more oranges in the red box than in the blue box
+    - this concept is very important later since it allows us to update our prediction after we observe data
         - nobody wants to make poor guesses forever!
-- two variables X and Y are *independent* if $p(X,Y) = p(X)p(Y)$
+- two variables X and Y are said to be *independent* if $p(X,Y) = p(X)p(Y)$
     - we can prove this from the product rule
     - if $p(X,Y) = p(X)p(Y)$, $p(Y \vert X) = p(Y)$
     - this means conditional probability of Y given X is independent of the value of X
