fixed sidebar ads

--- a/_posts/2020-03-04-baekjoon11724.md
+++ b/_posts/2020-03-04-baekjoon11724.md
@@ -11,6 +11,7 @@ tags:
     - DFS
 use_math: true
 toc: true
+toc_sticky: true
 ---
 
 [<img src="../../assets/images/algorithm/baekjoon11724">](https://www.acmicpc.net/problem/11724)
