--- a/_posts/2020-03-04-baekjoon11724.md
+++ b/_posts/2020-03-04-baekjoon11724.md
@@ -7,6 +7,7 @@ categories:
 tags:
     - Baekjoon
     - Brute Force
+    - Graph
     - BFS
     - DFS
 use_math: true
@@ -19,7 +20,7 @@ toc_sticky: true
 
 문제를 풀기 위해서는 먼저 연결 요소 (Connected Component)가 무엇인지 부터 알아야 합니다. 연결 요소의 정의는 [위키피디아](https://en.wikipedia.org/wiki/Component_(graph_theory))를 참고했습니다.
 
-그래프 이론에서 연결 요소(connected component)란 무방향 그래프(undirected graph)의 부분 그래프(subgraph)로서 부분 그래프 내의 모든 정점(vertex)쌍에 대하여 항상 경로가 존재하고 다른 연결 요소와 연결되어 있지 않은 것을 말합니다. 
+그래프 이론에서 연결 요소(connected component)란 무방향 그래프(undirected graph)의 부분 그래프(subgraph)로서 부분 그래프 내의 모든 정점(vertex)쌍에 대하여 항상 경로가 존재하고 다른 연결 요소와 연결되어 있지 않은 것을 말합니다. 그래프와 그래프 용어에 대한 좀 더 자세한 설명은 ["[Algorithm] 그래프 기초"]({{site.url}}{{site.baseurl}}/algorithm/graph)를 참고해주세요
 
 연결 요소의 개수를 구하는 문제는 완전 탐색 알고리즘인 BFS와 DFS로 풀 수 있습니다. 둘 중 어느 알고리즘으로 접근해도 무방하며 하나씩 살펴보도록 하겠습니다.
 
