--- a/_posts/2020-03-04-baekjoon11724.md
+++ b/_posts/2020-03-04-baekjoon11724.md
@@ -160,4 +160,4 @@ int main(void){
 }
 ```
 
-DFS와 BFS에 관한 보다 자세한 내용은 추후에 포스팅 하도록 하겠습니다. 
+DFS와 BFS에 관한 보다 기본적인 내용은 ["[Algorithm] BFS DFS"]({{site.url}}{{site.baseurl}}/algorithm/bfs_dfs)를 참고해주세요!
