modified bfs dfs

--- a/_posts/2020-03-10-bfs_dfs.md
+++ b/_posts/2020-03-10-bfs_dfs.md
@@ -17,7 +17,7 @@ toc_sticky: true
 
 ## 1. 그래프의 탐색
 
-그래프의 탐색은 하나의 정점으로투버 시작하여 차례대로 모든 정점을 한 번씩 방문하는 것입니다. 그래프 문제는 가장 기본적이면서 자주 등장하는 문제중 하나인데 어떤 노드로 부터 다른 노드까지 갈 수 있는지 파악하는 문제부터 출발지부터 목적지까지 가는 가장 빠른 경로 등을 찾는 데도 사용됩니다.
+그래프의 탐색은 하나의 정점으로부터 시작하여 차례대로 모든 정점을 한 번씩 방문하는 것입니다. 그래프 문제는 가장 기본적이면서 자주 등장하는 문제중 하나인데 어떤 노드로 부터 다른 노드까지 갈 수 있는지 파악하는 문제부터 출발지부터 목적지까지 가는 가장 빠른 경로 등을 찾는 데도 사용됩니다. 그래프에 대한 기초 개념은 ["[Algorithm] 그래프 기초"]({{site.url}}{{site.baseurl}}/algorithm/graph)를 참고해주세요.
 
 이 포스팅에서는 그래프 탐색 방법인 너비 우선 탐색(Breath First Search)와 깊이 우선 탐색(Depth First Search)를 살펴보도록 하겠습니다.
 
