updated prml ch1.2

--- a/_posts/2020-03-07-prml_ch1.2.md
+++ b/_posts/2020-03-07-prml_ch1.2.md
@@ -12,11 +12,11 @@ tags:
 use_math: true
 toc: true
 toc_sticky: true
-last_modified_at : 2020-03-09
+last_modified_at : 2020-03-13
 ---
 *This post is summary of the book Pattern Recognition and Machine Learning by Christopher M. Bishop*
 
-*A lot of explanations in this page has been quoted from the book directly because most of the content was definitions used in probability theory*
+*A lot of explanations in this page has been quoted from the book directly because most of the content is about definitions used in probability theory*
 
 ## 1.2 Probability Theory
 
@@ -201,3 +201,46 @@ $$
     - we can prove this from the product rule
     - if $p(X,Y) = p(X)p(Y)$, $p(Y \vert X) = p(Y)$
     - this means conditional probability of Y given X is independent of the value of X
+
+## 1.2.1 Probability densities
+- if the probability of a real-valued variable $x$ falling in the interval $(x, x+ \delta x)$ is given by $p(x)\delta x$ for $\delta x \rightarrow 0$, then $p(x)$ is called the *probability density* over $x$
+![figure1.12](../../assets/images/prml/figure1_12)
+- the probability that $x$ will lie in an interval $(a, b)$ is given by the following equation
+$$p(x \in (a,b)) = \int_a^b p(x)dx \tag{1.24}$$
+- probabilities are nonnegative by definition
+- the value of $x$ must lie somewhere on the real axis
+- therefore, the probability density $p(x)$ must satisfy the two conditions
+
+$$p(x) \geq 0 \tag{1.25}$$
+
+$\int_{-\infty}^{\infty} p(x) dx = 1 \tag{1.26}$
+
+### Change of Variables
+- nonlinear change of variables must be processed with special care due to *Jacobian factor*
+    - consider a change of variable $x = g(y)$
+    - then a function $f(x)$ becomes $\tilde{f}(y) = f(g(y))$
+    - this works the same in probability density
+    - consider a probability density $p_x(x)$ that corresponds to a density $p_y(y)$ with respect to the new variable y
+    - observations falling in the range $(x, x + \delta x)$ will, for small values of $\delta x$, be transformed into the range $(y, y+\delta y)$ where $p_x(x)\delta x \simeq p_y(y)\delta y$
+
+    $$p_y(y) = p_x(x) \left\vert \frac{dx}{dy} \right\vert = p_x(g(y))\vert(g'(y))\vert \tag{1.27}$$
+- the concept of the maximum of a probability density is dependent on the choice of variable
+
+----------------------
+- the probability that $x$ lies in the interval $(-\infty, z)$ is given by the *cumulative distribution function*
+    - satisfy $P'(x) = p(x)$ as shown in Figure 1.12
+
+$$P(z) = \int_{-\infty}^{z} p(x)dx \tag{1.28}$$
+- if we have several continuous variable $x_1, ..., x_D$, denoted collectively by the vector $\mathbf x$, then we can define a joint probability density $p(x) = p(x_1, ..., x_D)$ 
+- the probability of $\mathbf x$ falling in an infinitesimal volume $\delta \mathbf x$ containing the point $\mathbf x$ is given by $p(\mathbf x)\delta \mathbf x$
+
+$$p(\mathbf x) \geq 0 \tag{1.29}$$
+
+$$\int p(\mathbf x)d(\mathbf x) = 1 \tag{1.30}$$
+- if $x$ is discrete variable, then $p(x)$ is called a *probability mass function*
+    - because it can be regarded as a set of 'probability masses' concentrated at the allowed values of $x$
+- sum and product rules of probability and Bayes' theorem apply equally to the case of probability densities or to combinations of discrete and continuous variables
+
+$$p(x) = \int p(x,y)dy \tag{1.31}$$ 
+
+$$p(x,y) = p(y\vert x)p(x) \tag{1.32}$$
