updated prml ch1.2

--- a/_posts/2020-03-07-prml_ch1.2.md
+++ b/_posts/2020-03-07-prml_ch1.2.md
@@ -12,7 +12,7 @@ tags:
 use_math: true
 toc: true
 toc_sticky: true
-last_modified_at : 2020-03-13
+last_modified_at : 2020-03-14
 ---
 *This post is summary of the book Pattern Recognition and Machine Learning by Christopher M. Bishop*
 
@@ -244,3 +244,55 @@ $$\int p(\mathbf x)d(\mathbf x) = 1 \tag{1.30}$$
 $$p(x) = \int p(x,y)dy \tag{1.31}$$ 
 
 $$p(x,y) = p(y\vert x)p(x) \tag{1.32}$$
+
+## 1.2.2 Expectations and covariances
+- the average value of some function $f(x)$ under a probability distribution $p(x)$ is called the *expectation* of f(x)
+    - denoted by $\mathrm E[f]$
+    - one of the most important operations involving probabilities
+    - the average is weighted by the relative probabilities of the different values of $x$
+- for discrete distribution, expectation is given by
+
+$$ \mathrm E[f] = \sum_xp(x)f(x) \tag{1.33}$$
+
+- for continuous variables, expevtations are expressed in terms of an integration with respect to the corresponding probability density
+
+$$\mathrm E[f] = \int p(x)f(x)dx \tag{1.34}$$
+
+- if we are given a finite number N of points drawn from the probability distribution or probability density, then the expectation can be approximated as a finite sum over these points
+    - the approximation becomes exact in the limit $N \rightarrow \infty$
+
+$$\mathrm E[f] \simeq \frac{1}{N} \sum_{n=1}^Nf(x_n) \tag{1.35}$$
+
+- for the case of multiple variables, we can use a subscript to indicate which variable is being averaged over
+
+$$ \mathrm E_x[f(x,y)] \tag{1.37}$$
+
+- this denotes the average of the function $f(x,y)$ with respect to the distribution of $x$
+    - $E_x[f(x,y)]$ will be a function of y
+
+- *conditional expectation* with respect to a conditional distribution is analogus with the definition for continuous variables
+
+$$\mathrm E[f\vert y] = \sum_x p(x \vert y)f(x) \tag{1.37}$$
+
+- the *variance* of $f(x)$ provides a measure of how much variability there is in $f(x)$ around its mean value $\mathrm E[f(x)]$
+
+$$var[f] = \mathrm E[(f(x)-\mathrm E[f(x)])^2] \tag{1.38}$$
+
+- variance can be written in terms of the expectations of $f(x)$ and $f(x)^2$
+
+$$var[f] = \mathrm E[f(x)^2] - \mathrm E[f(x)]^2 \tag{1.39}$$
+
+- we can consider the variance of the variable $x$ itself
+
+$$var[x] = \mathrm E[x^2] - \mathrm E [x]^2 \tag{1.40}$$
+
+- for two random variables x and y, the *covariance* expresses the extent to which $x$ and $y$ vary together
+    - if x and y are independent, then their covariance vanishes
+
+$$cov[x,y] = \mathrm E_{x,y}[\{x - \mathrm E[x]\}\{y - \mathrm E [y]\}] = \mathrm E_{x,y}[xy] - E[x]E[y] \tag{1.41}$$
+
+- in the case of two vectors of random variable $x$ and $y$, the covariance is a matrix
+    - $cov[x] \equiv cov[x,x]$
+
+$$cov[x,y] = \mathrm E_{x,y}[\{ \mathbf x - \mathrm E[ \mathbf x]\}\{ \mathbf y^T - \mathrm E[\mathbf y^T]\}] = \mathrm E_{x,y}[\mathbf x \mathbf y^T] - \mathrm E[\mathbf x] \mathrm E[\mathbf y^T] \tag{1.42}$$
+
