--- a/_posts/2021-10-20-docker_ch6.md
+++ b/_posts/2021-10-20-docker_ch6.md
@@ -115,4 +115,16 @@ toc_sticky: true
 - 워커 노드로 전달된 요쳥은 포드 중 하나로 전달되어 처리됨
 - MetalLB 라는 이름의 오픈소스 프로젝트를 사용하면 온 프레미스 환경에서도 LoadBalancer 타입의 서비스 사용 가능
 ### 6.5.5 트래픽의 분배를 결정하는 서비스 속성: externalTrafficPolicy
-
+- 기본적으로 externalTrafficPolicy 속성이 Cluster로 설정됨
+    - 이 경우 모든 워커 노드에서 동일한 랜덤 포트가 개방됨
+    - 클라우드 플랫폼의 로드 밸런서는 노드 중 하나로 요청을 전달하고 노드는 다시 포드 중 하나로 요청을 전달
+    - 단, 노드 간에 요청이 리다이렉트 되어 NAT가 발생하므로 클라이언트의 IP를 보존할 수 없음
+- 서비스의 externalTrafficPolicy 속성을 local로 설정해 생성하면 포드가 위치한 노드만 랜덤한 포트를 개방
+    - 로드 밸런서는 포드가 위치한 노드로만 요청을 전달하며, 해당 노드 내의 포드에서만 요청이 분산됨
+    - 따라서 네트워크 홉이 한 단계 적으며 클라이언트의 IP 또한 포드의 소스코드 내에서 정상적으로 확인 가능
+- 하지만 externalTrafficPolicy를 Local로 설정하는 것이 무조건 좋은 것은 아님
+    - 특정 노드의 포트에 부하가 집중되거나 적어질 수도 있음
+        - 자원활용률 측면에서 바람직하지 않음
+### 6.5.6 요청을 외부로 리다이렉트하는 서비스: ExternalName
+- 서비스가 외부 도메인을 가리키도록 설정할 수 있음
+- 쿠버네티스와 별개로 존재하는 레거시 시스템에 연동해야하는 상황에서 유용하게 사용 가능
