--- a/_posts/2021-11-02-docker_ch8.md
+++ b/_posts/2021-11-02-docker_ch8.md
@@ -18,9 +18,10 @@ toc_sticky: true
     - 외부 요청의 라우팅
     - 가상 호스트 기반의 요청 처리
     - SSL/TLS 보안 연결 처리
+
 ## 8.1 인그레스를 사용하는 이유
 - 여러개의 서비스에 접근하기 위해 여러개의 URL이 필요 없이 인그레스 접근 URL만 있으면 됨
-- 라우팅 정의나 보안 연결 등과 같은 세부 설정은 서비스 디플로이ㄴ
+- 라우팅 정의나 보안 연결 등과 같은 세부 설정은 서비스 디플로이먼트가 아닌 인그레스에 의해 수행됨
 
 ## 8.2 인그레스의 구조
 - 인그레스는 요청을 처리하는 규칙을 정의하는 선언적인 오브젝트
